[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/UI/SettingsControllers/VolumeSlider.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/SettingsControllers/SettingSlider.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/SettingsMenu.gd" type="Script" id=3]
[ext_resource path="res://src/UI/SettingsControllers/SettingSwitch.tscn" type="PackedScene" id=4]

[sub_resource type="InputEventAction" id=1]
action = "pause"
pressed = true

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="SettingsMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.0
margin_top = -158.0
margin_right = 122.0
margin_bottom = 158.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="VBoxContainer" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 244.0
margin_bottom = 353.0

[node name="Controls" type="Label" parent="Panel/Settings"]
margin_right = 237.0
margin_bottom = 31.0
text = "Controls:
"

[node name="Mouse" type="Label" parent="Panel/Settings"]
margin_top = 35.0
margin_right = 237.0
margin_bottom = 49.0
text = "Sensitivity mouse"

[node name="SensitivityMouse" parent="Panel/Settings" instance=ExtResource( 2 )]
margin_top = 53.0
margin_right = 237.0
margin_bottom = 69.0

[node name="Mouse2" type="Label" parent="Panel/Settings"]
margin_top = 73.0
margin_right = 237.0
margin_bottom = 87.0
text = "Sensitivity controller"

[node name="SensitivityController" parent="Panel/Settings" instance=ExtResource( 2 )]
margin_top = 91.0
margin_right = 237.0
margin_bottom = 107.0
setting_name = "controller_sensitivity"

[node name="InvertedControls" parent="Panel/Settings" instance=ExtResource( 4 )]
margin_top = 111.0
margin_right = 237.0
margin_bottom = 151.0
text = "Invert camera horizontal"
setting_name = "invert_camera_x"

[node name="InvertedControls2" parent="Panel/Settings" instance=ExtResource( 4 )]
margin_top = 155.0
margin_right = 237.0
margin_bottom = 195.0
text = "Invert camera vertical"
setting_name = "invert_camera_y"

[node name="HSeparator" type="HSeparator" parent="Panel/Settings"]
margin_top = 199.0
margin_right = 237.0
margin_bottom = 203.0

[node name="Audio" type="Label" parent="Panel/Settings"]
margin_top = 207.0
margin_right = 237.0
margin_bottom = 238.0
text = "Audio:
"

[node name="Master" type="Label" parent="Panel/Settings"]
margin_top = 242.0
margin_right = 237.0
margin_bottom = 256.0
text = "Master"

[node name="MasterSlider" parent="Panel/Settings" instance=ExtResource( 1 )]
margin_top = 260.0
margin_right = 237.0
margin_bottom = 276.0

[node name="SFX" type="Label" parent="Panel/Settings"]
margin_top = 280.0
margin_right = 237.0
margin_bottom = 294.0
text = "SFX"

[node name="SFXSlider" parent="Panel/Settings" instance=ExtResource( 1 )]
margin_top = 298.0
margin_right = 237.0
margin_bottom = 314.0
audio_bus_name = "SFX"

[node name="HSeparator2" type="HSeparator" parent="Panel/Settings"]
margin_top = 318.0
margin_right = 237.0
margin_bottom = 322.0

[node name="BottomButtons" type="HBoxContainer" parent="Panel/Settings"]
margin_left = 35.0
margin_top = 326.0
margin_right = 201.0
margin_bottom = 346.0
size_flags_horizontal = 4

[node name="AcceptBtn" type="Button" parent="Panel/Settings/BottomButtons"]
margin_right = 56.0
margin_bottom = 20.0
size_flags_horizontal = 4
text = "Accept"

[node name="CancelBtn" type="Button" parent="Panel/Settings/BottomButtons"]
margin_left = 60.0
margin_right = 114.0
margin_bottom = 20.0
size_flags_horizontal = 4
shortcut = SubResource( 2 )
text = "Cancel"

[node name="ResetBtn" type="Button" parent="Panel/Settings/BottomButtons"]
margin_left = 118.0
margin_right = 166.0
margin_bottom = 20.0
size_flags_horizontal = 4
text = "Reset"

[connection signal="pressed" from="Panel/Settings/BottomButtons/AcceptBtn" to="." method="_on_AcceptBtn_pressed"]
[connection signal="pressed" from="Panel/Settings/BottomButtons/CancelBtn" to="." method="_on_CancelBtn_pressed"]
[connection signal="pressed" from="Panel/Settings/BottomButtons/ResetBtn" to="." method="_on_ResetBtn_pressed"]
